# sunderland_bin_collection

./: .gitignore  LICENSE  README.md  get_user_details.py  main.py  pyproject.toml  requirements.txt  scrape_main_webpage.py
src/: get_addresses_at_postcode.py  get_collection_info.py  get_postcode.py  get_specific_address_from_user.py  get_user_details.py  instantiate_chrome_driver.py  main.py  offer_to_send_email.py  offer_to_use_default_settings.py  scrape_main_webpage.py  send_email.py  use_default_address.py
